<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/main_activity_nav_content"
            android:icon="@drawable/ic_content"
            android:title="@string/action_weather" />
        <item
            android:id="@+id/main_activity_nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>
    <item
        android:id="@+id/main_activity_nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/action_about" />

</menu>